Lost Days Of Spring - Platformer game - debugger z-index fix

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
 .container {
     margin: 0;
     position: relative;
+    z-index: 1;
 }
 #loading {
     position: absolute;
@@ -67,6 +68,7 @@ body {
         inset 0 1px 0 rgba(255, 255, 255, 0.03);
 
     pointer-events: none;
+    z-index: 2;
 }
 
 #debug {
